...
        android:backgroundTint="#00FAFAFA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#FAFAFA" />

    <TextView
        android:id="@+id/nameOnBackgroundTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="36dp"
        android:layout_weight="1"

...
            android:layout_height="36dp"
            app:layout_constraintBottom_toBottomOf="@+id/backgroudImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/favoriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#FCFCFC"
            android:src="@drawable/ic_baseline_star_24"
            android:tint="#FFC107"
...
